# vimsouls

./: .gitignore  .gitmodules  .vim  CMakeLists.txt  README.md  README.txt  conanfile.txt
.vim/: coc-settings.json
include/: character.hpp  game.hpp
src/: CMakeLists.txt  character.cpp  game.cpp  main.cpp
